forth/test/fail/test_call_missing_dot_comp.af
\ Must fail to compile.
fun: .test_call_missing_dot_comp { -- err }
  " bad %zd" 123 logf
end
